--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/device-motion": "^3.5.0",
     "@ionic-native/geolocation": "^3.5.0",
     "@ionic-native/google-maps": "^3.5.0",
+    "@ionic-native/media": "^3.6.1",
     "@ionic-native/native-storage": "^3.6.1",
     "@ionic-native/splash-screen": "3.4.2",
     "@ionic-native/status-bar": "3.4.2",
